Fix View X articles overlapping articles

--- a/packages/portal-style/src/modules/_kb-category.scss
+++ b/packages/portal-style/src/modules/_kb-category.scss
@@ -1,5 +1,6 @@
 .dp-po-kb-category {
   height: 100%;
+  padding-bottom: 1px;
 
   .dp-po-category-title {
     &-link {
